--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,6 +1,5 @@
-{% load static %}
-
 <!DOCTYPE html>
+{% load static %}
 <html>
 
 <head>
@@ -15,8 +14,8 @@
 
     <a href="/rango/">Index</a><br />
 
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango">
-    <img src="/media/cat.jpg" alt="Picture of a Cat">
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 
 </body>
 
