--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@
 
     <p>Here is the about page.</p>
     <p>This tutorial has been put together by Nishita Phutane.</p>
+    <p>Visits: {{ visits }}</p>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 {% endblock %}
